# mailjunky-python

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/mailjunky/: __init__.py  client.py  configuration.py  connection.py  exceptions.py
src/mailjunky/resources/: __init__.py  base.py  contacts.py  emails.py  events.py
tests/: conftest.py
tests/unit/: test_client.py  test_configuration.py  test_exceptions.py  test_resources.py
