[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mailjunky"
version = "0.1.0"
description = "Python SDK for MailJunky - Email API with AI-Powered Workflows"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Stephen McCullough", email = "stevie@skillfulgorilla.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "respx>=0.20",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/swmcc/mailjunky-python"
Documentation = "https://swmcc.github.io/mailjunky-python"
Repository = "https://github.com/swmcc/mailjunky-python"

[tool.hatch.build.targets.wheel]
packages = ["src/mailjunky"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/mailjunky"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]
